# videographer

./: .gitignore  CITATION.cff  CLAUDE.md  README.md  clean_csv.py  clean_for_linearized.py  data.csv  main.py  manual_clean_csv.py  pyproject.toml  to_csv.py
src/videographer/: __init__.py  __main__.py  calibration.py  selectors.py  tracker.py
