[project]
name = "videographer"
version = "0.1.0"
description = "Object tracking with lens distortion correction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "norfair>=2.2.0",
    "opencv-contrib-python>=4.8.0",
    "numpy>=1.24.0",
]

[project.scripts]
videographer = "videographer.__main__:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
